--- a/app/src/components/layouts/Root.css
+++ b/app/src/components/layouts/Root.css
@@ -26,7 +26,7 @@
 }
 
 .card {
-  max-height: 70vh;
+  max-height: 75vh;
   overflow: hidden;
 }
 
@@ -38,7 +38,7 @@
   padding-bottom: 1.5vh;
 }
 
-@media only screen and (min-width : 321px) {
+/*@media only screen and (min-width : 321px) and (orientation : landscape) {
   .main {
     top: 15vh;
   }
@@ -48,18 +48,18 @@
   .ui.card>.content {
     overflow: auto;
   }
-  .extra {
-    display: none;
-  }
-}
+}*/
 
-@media only screen and (min-device-width: 320px) and (max-device-height: 568px) and (orientation : landscape) and (-webkit-device-pixel-ratio: 2){
+@media only screen and (min-device-width: 320px) and (max-device-height: 568px) and (orientation : landscape) {
   .main {
     top: 15vh;
     height: 85vh;
   }
   .ui.card>.content {
     overflow: auto;
+  }
+  .extra {
+    display: none;
   }
 }
 
@@ -70,5 +70,8 @@
   }
   .ui.card>.content {
     overflow: auto;
+  }
+  .extra {
+    display: none;
   }
 }
